# sonic-workspace-addons

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt
appiumtests/: CMakeLists.txt  keyboardindicatortest.py
appiumtests/calendarplugins/: alternatecalendartest.py
applets/: CMakeLists.txt
applets/colorpicker/: CMakeLists.txt
applets/comic/: CMakeLists.txt  comic.cpp  comic.h
applets/fifteenPuzzle/: metadata.json
applets/grouping/: CMakeLists.txt  groupingcontainment.cpp
applets/katesessions/: metadata.json
applets/keyboardindicator/: main.xml  metadata.desktop  metadata.json
applets/kickoff-netrunner/: CMakeLists.txt  Messages.sh  makepackage  metadata.desktop
applets/konqi-puzzle/: CMakeLists.txt  Messages.sh
applets/notes/: CMakeLists.txt  Messages.sh  filesystemnoteloader.cpp  notemanager.h
applets/powermanagement-inhibitor/: CMakeLists.txt  Messages.sh
applets/quickshare/: Messages.sh
applets/screensaver-inhibitor/: CMakeLists.txt  Messages.sh
applets/timer/: CMakeLists.txt  CompactRepresentation.qml  Messages.sh  TimerEdit.qml  plasma_applet_timer.notifyrc
applets/userswitcher/: main.xml
applets/weather/: CMakeLists.txt  PlasmaWeather.cmake.in  weatherapplet.cpp  weatherapplet.h
applets/weather/ions/open-meteo/: CMakeLists.txt  ion_open_meteo.cpp  ion_open_meteo.h  metadata.json
dataengines/: CMakeLists.txt
dataengines/potd/: HowToAddProvider.txt  apodprovider.cpp  bingprovider.cpp  cachedprovider.cpp  cachedprovider.h  epodprovider.cpp  flickrprovider.cpp  flickrprovider.h  natgeoprovider.cpp  noaaprovider.cpp  potd.cpp  potd.h  potdprovider.cpp  potdprovider.h  simonstalenhagprovider.cpp  simonstalenhagprovider.h  simonstalenhagprovider.json  unsplashprovider.cpp  wcpotdprovider.cpp
dict/: CMakeLists.txt  dictengine.cpp  dictengine.h  dictfinder.cpp  dictfinder.h  localdictengine.cpp  localdictengine.h
effects/cube/: CMakeLists.txt  cubeconfig.kcfg  cubeeffect.cpp  cubeeffect.h
kded/: CMakeLists.txt  kameleon.actions  kameleon.cpp  kameleon.h  kameleon.json  kameleonhelper.actions  kameleonhelper.cpp  kameleonhelper.h
kded/kameleon/: kameleon.cpp  kameleon.h  kameleonhelper.cpp  kameleonhelper.h
kdeds/kameleon/: CMakeLists.txt  kameleon.cpp  kameleon.h  kameleon.json  kameleonhelper.actions  kameleonhelper.cpp
kdeds/kameleon/qmk/qmk-dbus-helper/: CMakeLists.txt  qmk-dbus-helper.cpp  qmk-dbus-helper.h
kdeds/potd/: kded_potd.cpp  kded_potd.h
kwin/effects/reflectcursor/: CMakeLists.txt
plasmacalendarplugins/alternatecalendar/: CMakeLists.txt  Messages.sh  alternatecalendarplugin.cpp  alternatecalendarplugin.h  alternatecalendarplugin.json  calendarsystem.h  config-ICU.h.cmake
plasmacalendarplugins/alternatecalendar/config/plugin/: CMakeLists.txt  configplugin.cpp  configplugin.h  configstorage.cpp  configstorage.h  qmldir
plasmacalendarplugins/alternatecalendar/config/qml/: AlternateCalendarConfig.qml  CMakeLists.txt
plasmacalendarplugins/alternatecalendar/provider/: abstractcalendarprovider.cpp  abstractcalendarprovider.h  chinesecalendar.cpp  chinesecalendar.h  hebrewcalendar.cpp  icucalendar_p.cpp  icucalendar_p.h  indiancalendar.cpp  indiancalendar.h  islamiccalendar.cpp  qtcalendar.cpp  qtcalendar.h
po/ar/: plasma_applet_org.kde.plasma.fifteenpuzzle.po  plasma_applet_org.kde.plasma.timer.po  plasma_wallpaper_org.kde.potd.po  plasma_wallpaper_org.kde.tiled.po
po/ca/: plasma_applet_org.kde.plasma.fifteenpuzzle.po  plasma_applet_org.kde.plasma.timer.po  plasma_applet_org.kde.plasma.weather.po
po/eu/: plasma_calendar_alternatecalendar.po
po/fr/: plasma_applet_org.kde.plasma.fifteenpuzzle.po  plasma_applet_org.kde.plasma.timer.po  plasma_calendar_alternatecalendar.po  plasma_wallpaper_org.kde.potd.po  plasma_wallpaper_org.kde.tiled.po
po/ga/: plasma_applet_org.kde.plasma.mediaframe.po  plasma_applet_org.kde.plasma.quicklaunch.po  plasma_calendar_alternatecalendar.po  plasma_wallpaper_org.kde.potd.po  plasma_wallpaper_org.kde.tiled.po
po/it/: plasma_applet_org.kde.plasma.fifteenpuzzle.po  plasma_applet_org.kde.plasma.timer.po  plasma_calendar_alternatecalendar.po  plasma_wallpaper_org.kde.potd.po  plasma_wallpaper_org.kde.tiled.po
po/ko/: plasma_applet_org.kde.plasma.fifteenpuzzle.po  plasma_calendar_alternatecalendar.po  plasma_wallpaper_org.kde.potd.po
po/pl/: plasma_calendar_alternatecalendar.po
profiles/: CMakeLists.txt  profilesmodel.cpp
runners/: CMakeLists.txt
runners/books/: CMakeLists.txt  Messages.sh  books.cpp  books.desktop  books.h  booksjob.cpp  booksjob.h
runners/characters/: CMakeLists.txt  (+3 more)
runners/spellchecker/autotests/: CMakeLists.txt  spellcheckerrunnertest.cpp  spellcheckrunnertest.cpp
wallpapers/: CMakeLists.txt
wallpapers/potd/: CMakeLists.txt
wallpapers/potd/contents/ui/: WallpaperInformation.qml  config.qml
wallpapers/potd/package/contents/ui/: ActionContextMenu.qml  EditContextMenu.qml  SelectableLabel.qml  WallpaperDelegate.qml  WallpaperInformation.qml  WallpaperPreview.qml  config.qml  main.qml
wallpapers/potd/plugin/: CMakeLists.txt  backend.cpp  backend.h  epodprovider.h  potd.cpp  potd.h  potdplugin.cpp  potdplugin.h  potdprovider.cpp  potdprovider.h  qmldir
wallpapers/potd/plugins/: CMakeLists.txt  backend.cpp  backend.h  bingprovider.cpp  bingprovider.h  cachedprovider.cpp  cachedprovider.h  config-NetworkManagerQt.h.cmake  potdbackend.cpp  potdbackend.h  potdengine.cpp  potdengine.h  potdplugin.cpp  potdprovider.cpp  potdprovider.h  potdprovidermodel.cpp  potdprovidermodel.h
wallpapers/potd/plugins/providers/: CMakeLists.txt  apodprovider.cpp  apodprovider.h  bingprovider.cpp  bingprovider.h  epodprovider.cpp  epodprovider.h  flickrprovider.cpp  flickrprovider.h  natgeoprovider.cpp  natgeoprovider.h  noaaprovider.cpp  noaaprovider.h  simonstalenhagprovider.cpp  simonstalenhagprovider.h  spotlightprovider.cpp  spotlightprovider.h  spotlightprovider.json  unsplashprovider.cpp  unsplashprovider.h  wcpotdprovider.cpp  wcpotdprovider.h  wcpotdprovider.json
windowswitchers/: CMakeLists.txt  thumbnails_to_breeze.py  thumbnails_to_breeze.upd
(+230 files in other folders)
